aggiunta immagine jumbotron e aggiunte migliorie al jumbotron

--- a/index.html
+++ b/index.html
@@ -70,11 +70,13 @@
                         <button class="blu-button">inizia la tua prova gratuita</button>
                         <p>Annulla in qualsiasi momento</p>
                         <div></div>
-
                     </div>
 
+                    <div id="container-img-jumbotron">
+                        <img src="img/jumbo.png" alt="">
+                    </div>
                 </div>
-                
+
             </div>
 
         </section>
