Aggiunta prima colonna del contenitore float nel main first section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!--IMPORT GOOGLE FONT H1-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
      
     <!-- FONT AWESOME -->
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
@@ -113,6 +113,33 @@
                 <div class="container-float clearfix">
                     <div class="fl">
 
+                        <div class="column-header">
+                            <div>singolo</div>
+                        </div>
+
+                        <div class="column-main">
+                            <h3>Professional</h3>
+                            <p>19,99&euro;<br>/mese </p>
+
+                            <p><i class="far fa-user"></i>1 utente</p>
+                            <p><i class="far fa-folder"></i>3 TB di spazio di archiviazione sicuro</p>
+                            <p><i class="fas fa-pencil-alt"></i>Funzioni di produttività premium e <br>condivisione file semplice e sicura</p>
+
+                            <button class="blu-button">Prova gratis per 30 giorni</button>
+
+                            <p>oppure<a href="#">acquista ora</a></p>
+                            <hr>
+                        </div>
+
+                        <div class="column-footer">
+                            <h4>Punti salienti del piano</h4>
+                            <i class="fas fa-check"></i><li>Invia file fino a 100 GB con Dropbox <br> Transfert</li>
+                            <li><i class="fas fa-check"></i>Cartelle offline su dispositivi mobili</li>
+                            <li><i class="fas fa-check"></i>Pulizia remota dell'account</li>
+                            <li><i class="fas fa-check"></i>Filigrana documento</li>
+                            <li><i class="fas fa-check"></i>Assistenza prioritaria via email e <br> chat</li>
+                        </div>
+
                     </div>
 
                     <div class="fl">
@@ -124,7 +151,7 @@
                     </div>
 
                 </div>
-                
+
             </section>
 
             <!--CONTATTI VENDITE-->
