completata prima colonna in main first section float

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     <div class="fl">
 
                         <div class="column-header">
-                            <div>singolo</div>
+                            <div><i class="far fa-user"></i>Singolo</div>
                         </div>
 
                         <div class="column-main">
@@ -133,13 +133,29 @@
 
                         <div class="column-footer">
                             <h4>Punti salienti del piano</h4>
-                            <i class="fas fa-check"></i><li>Invia file fino a 100 GB con Dropbox <br> Transfert</li>
-                            <li><i class="fas fa-check"></i>Cartelle offline su dispositivi mobili</li>
-                            <li><i class="fas fa-check"></i>Pulizia remota dell'account</li>
-                            <li><i class="fas fa-check"></i>Filigrana documento</li>
-                            <li><i class="fas fa-check"></i>Assistenza prioritaria via email e <br> chat</li>
-                        </div>
 
+                            <li>
+                                <i class="fas fa-check"></i>
+                                <div>Invia file fino a 100 GB con Dropbox <br> Transfert</div>
+                            </li>
+                            <li>
+                                <i class="fas fa-check"></i>
+                                Cartelle offline su dispositivi mobili
+                            </li>
+                            <li>
+                                <i class="fas fa-check"></i>
+                                Pulizia remota dell'account
+                            </li>
+                            <li>
+                                <i class="fas fa-check"></i>
+                                Filigrana documento
+                            </li>
+                            <li>
+                                <i class="fas fa-check"></i>
+                                <div>Assistenza prioritaria via email e <br> chat</div>
+                            </li>
+                            
+                        </div>
                     </div>
 
                     <div class="fl">
