completamento third-main-section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <!--IMPORT GOOGLE FONT H1-->
+    <!--IMPORT GOOGLE FONT-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
@@ -289,6 +289,7 @@
             <section>
 
                 <div class="second-main-section">
+
                     <div class="header-second-main-section">
                         <div>Team</div>
                     </div>    
@@ -305,6 +306,15 @@
 
             <!--CONTATTI PARTNER DROPBOX-->
             <section>
+
+                <div class="third-main-section">
+                    <div class="container-img-partner-dropbox"></div>
+                    <div class="container-text-partner-dropbox">
+                        <h3>Entra in contatto con un partner <br> Dropbox</h3>
+                        <p>Trova un partner Dropbox e HelloSing di fiducia. Ottieni le <br> soluzioni e i servizi necessari per raggiungere i tuoi <br> obiettivi aziendali, tra cui impementazione, integrazione, <br> gestione e supporto continui.</p>
+                        <button>Trova un partner</button>
+                    </div>
+                </div>
 
             </section>
 
