Conclusione main section row

--- a/index.html
+++ b/index.html
@@ -320,7 +320,66 @@
 
             <!--OPERAZIONI CON DROPBOX-->
             <section>
+                <div class="container-row">
+                    <h2>Esegui più operazioni con Dropbox Business</h2>
+                    <row>
 
+                        <div class="first-row">
+                            <div class="container-img-text-row">
+                                <div class="container-img-row bg-one-row"></div>
+                                <div class="container-text-row">
+                                    <h3>Passa di meno da uno <br> strumento al'altro</h3>
+                                    <p>Porta a termine le attività quotidiane con <br> un solo strumento. Crea, modifica e <br> condividi contenuti cloud da Documenti, <br> Fogli e presentazioni di Google, file <br> Microsoft Office e Dropbox Paper <br> direttamente da Dropbox.</p>
+                                </div>    
+                            </div>
+
+                            <div class="container-img-text-row">
+                                <div class="container-img-row bg-two-row"></div>
+                                <div class="container-text-row">
+                                    <h3>Passa di meno da uno <br> strumento al'altro</h3>
+                                    <p>Porta a termine le attività quotidiane con <br> un solo strumento. Crea, modifica e <br> condividi contenuti cloud da Documenti, <br> Fogli e presentazioni di Google, file <br> Microsoft Office e Dropbox Paper <br> direttamente da Dropbox.</p>
+                                </div>    
+                            </div>
+
+                            <div class="container-img-text-row">
+                                <div class="container-img-row bg-three-row"></div>
+                                <div class="container-text-row">
+                                    <h3>Passa di meno da uno <br> strumento al'altro</h3>
+                                    <p>Porta a termine le attività quotidiane con <br> un solo strumento. Crea, modifica e <br> condividi contenuti cloud da Documenti, <br> Fogli e presentazioni di Google, file <br> Microsoft Office e Dropbox Paper <br> direttamente da Dropbox.</p>
+                                </div>    
+                            </div>
+                        </div>
+                    </row>
+
+                    <row>
+                        <div class="first-row">
+                            <div class="container-img-text-row">
+                                <div class="container-img-row bg-four-row"></div>
+                                <div class="container-text-row">
+                                    <h3>Passa di meno da uno <br> strumento al'altro</h3>
+                                    <p>Porta a termine le attività quotidiane con <br> un solo strumento. Crea, modifica e <br> condividi contenuti cloud da Documenti, <br> Fogli e presentazioni di Google, file <br> Microsoft Office e Dropbox Paper <br> direttamente da Dropbox.</p>
+                                </div>    
+                            </div>
+
+                            <div class="container-img-text-row">
+                                <div class="container-img-row bg-five-row"></div>
+                                <div class="container-text-row">
+                                    <h3>Passa di meno da uno <br> strumento al'altro</h3>
+                                    <p>Porta a termine le attività quotidiane con <br> un solo strumento. Crea, modifica e <br> condividi contenuti cloud da Documenti, <br> Fogli e presentazioni di Google, file <br> Microsoft Office e Dropbox Paper <br> direttamente da Dropbox.</p>
+                                </div>    
+                            </div>
+
+                            <div class="container-img-text-row">
+                                <div class="container-img-row bg-six-row"></div>
+                                <div class="container-text-row">
+                                    <h3>Passa di meno da uno <br> strumento al'altro</h3>
+                                    <p>Porta a termine le attività quotidiane con <br> un solo strumento. Crea, modifica e <br> condividi contenuti cloud da Documenti, <br> Fogli e presentazioni di Google, file <br> Microsoft Office e Dropbox Paper <br> direttamente da Dropbox.</p>
+                                </div>    
+                            </div>
+                        </div>
+                    </row>
+
+                </div>
             </section>
 
         </div>    
