Completamento img fourth main section con modifica colore svg

--- a/index.html
+++ b/index.html
@@ -398,16 +398,16 @@
             <div class="container-float-fourth-main-section clearfix">
                
                 <div class="container-boxes-left fl">
-                    <div class="box fl bg-one">
+                    <div class="box fl bg-green">
                         <img src="img/designit.svg" alt="">
                     </div>
-                    <div class="box fl">
+                    <div class="box fl bg-amaranto">
                         <img src="img/arizona_state_university.svg" alt="">
                     </div>
-                    <div class="box fr">
+                    <div class="box fr bg-red">
                         <img src="img/topps.svg" alt="">
                     </div>
-                    <div class="box fr">
+                    <div class="box fr bg-blue">
                         <img id="img-box" src="img/university_of_florida.svg" alt="">
                     </div>
                 </div>
@@ -417,16 +417,16 @@
                 </div>
 
                 <div class="container-boxes-right fr">
-                    <div class="box fl">
+                    <div class="box fl bg-different-red">
                         <img src="img/world_bicycle_relief.svg" alt="">
                     </div>
-                    <div class="box fl">
+                    <div class="box fl bg-different-blue">
                         <img src="img/hearst_corp.svg" alt="">
                     </div>
-                    <div class="box fr">
+                    <div class="box fr bg-yellow">
                         <img src="img/clear_channel.svg" alt="">
                     </div>
-                    <div class="box fr">
+                    <div class="box fr bg-violet">
                         <img src="img/lonely_planet.svg" alt="">
                     </div>
                 </div>
