Completamento center container text in fourth manin section

--- a/index.html
+++ b/index.html
@@ -413,7 +413,10 @@
                 </div>
 
                 <div class="container-text-center fl">
-
+                    <div id="logo-design-container-text-box"></div>
+                    <div class="trattino"></div>
+                    <p>"I membri del nostro team lavorano costanemente in Paesi, fusi orari e <br> uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, <br> ma nessuna è facile quato Dropbox e Dropbox Paper. Ora molte <br> soluzioni sono compatibili con queste esigenze, ma nessuna è facile quando Dropbox Paper".</p>
+                    <p>Morten Thomsen, Global IT Lead</p>
                 </div>
 
                 <div class="container-boxes-right fr">
