Conclusione footer con aggiunta delle colonne float con il testo

--- a/index.html
+++ b/index.html
@@ -480,7 +480,46 @@
                     <li>Sicurezza</li>
                     <li>Funzioni</li>
                 </div>
+
+                <div class="float-footer-container fl">
+                    <h4>Prodotti</h4>
+                    <li>Applicazione desktop</li>
+                    <li>Perchè Dropbox</li>
+                    <li>Piani</li>
+                    <li>Sicurezza</li>
+                    <li>Funzioni</li>
+                </div>
+
+                <div class="float-footer-container fl">
+                    <h4>Azienda</h4>
+                    <li>Applicazione desktop</li>
+                    <li>Perchè Dropbox</li>
+                    <li>Piani</li>
+                    <li>Sicurezza</li>
+                    <li>Funzioni</li>
+                </div>
+
+                <div class="float-footer-container fl">
+                    <h4>Supporto</h4>
+                    <li>Applicazione desktop</li>
+                    <li>Perchè Dropbox</li>
+                    <li>Piani</li>
+                    <li>Sicurezza</li>
+                    <li>Funzioni</li>
+                </div>
+
+                <div class="float-footer-container fl">
+                    <h4>Community</h4>
+                    <li>Applicazione desktop</li>
+                    <li>Perchè Dropbox</li>
+                    <li>Piani</li>
+                </div>
+                
+                <div class="trattino-footer"></div>
+                <span id="span-footer"><i class="fas fa-globe-americas"></i> italiano <i class="fas fa-caret-up"></i></span>
             </div>
+            
+
         </div>
     </footer>
    
