--- a/index.html
+++ b/index.html
@@ -474,46 +474,93 @@
             <div class="container-footer margin-footer clearfix">
                 <div class="float-footer-container fl">
                     <h4>Dropbox</h4>
-                    <li>Applicazione desktop</li>
-                    <li>Perchè Dropbox</li>
-                    <li>Piani</li>
-                    <li>Sicurezza</li>
-                    <li>Funzioni</li>
+                    <li>
+                        <a href="#">Applicazione desktop</a>
+                    </li>
+                    <li>
+                        <a href="#">Perchè Dropbox</a>
+                    </li>
+                    <li>
+                        <a href="#">Piani</a>    
+                    </li>
+                    <li>
+                        <a href="#">Sicurezza</a>
+                    </li>
+                    <li>
+                        <a href="#">Funzioni</a>
+                    </li>
                 </div>
 
                 <div class="float-footer-container fl">
-                    <h4>Prodotti</h4>
-                    <li>Applicazione desktop</li>
-                    <li>Perchè Dropbox</li>
-                    <li>Piani</li>
-                    <li>Sicurezza</li>
-                    <li>Funzioni</li>
+                    <h4>Dropbox</h4>
+                    <li>
+                        <a href="#">Applicazione desktop</a>
+                    </li>
+                    <li>
+                        <a href="#">Perchè Dropbox</a>
+                    </li>
+                    <li>
+                        <a href="#">Piani</a>    
+                    </li>
+                    <li>
+                        <a href="#">Sicurezza</a>
+                    </li>
+                    <li>
+                        <a href="#">Funzioni</a>
+                    </li>
                 </div>
 
                 <div class="float-footer-container fl">
-                    <h4>Azienda</h4>
-                    <li>Applicazione desktop</li>
-                    <li>Perchè Dropbox</li>
-                    <li>Piani</li>
-                    <li>Sicurezza</li>
-                    <li>Funzioni</li>
+                    <h4>Dropbox</h4>
+                    <li>
+                        <a href="#">Applicazione desktop</a>
+                    </li>
+                    <li>
+                        <a href="#">Perchè Dropbox</a>
+                    </li>
+                    <li>
+                        <a href="#">Piani</a>    
+                    </li>
+                    <li>
+                        <a href="#">Sicurezza</a>
+                    </li>
+                    <li>
+                        <a href="#">Funzioni</a>
+                    </li>
                 </div>
 
                 <div class="float-footer-container fl">
-                    <h4>Supporto</h4>
-                    <li>Applicazione desktop</li>
-                    <li>Perchè Dropbox</li>
-                    <li>Piani</li>
-                    <li>Sicurezza</li>
-                    <li>Funzioni</li>
+                    <h4>Dropbox</h4>
+                    <li>
+                        <a href="#">Applicazione desktop</a>
+                    </li>
+                    <li>
+                        <a href="#">Perchè Dropbox</a>
+                    </li>
+                    <li>
+                        <a href="#">Piani</a>    
+                    </li>
+                    <li>
+                        <a href="#">Sicurezza</a>
+                    </li>
+                    <li>
+                        <a href="#">Funzioni</a>
+                    </li>
                 </div>
 
                 <div class="float-footer-container fl">
-                    <h4>Community</h4>
-                    <li>Applicazione desktop</li>
-                    <li>Perchè Dropbox</li>
-                    <li>Piani</li>
+                    <h4>Dropbox</h4>
+                    <li>
+                        <a href="#">Applicazione desktop</a>
+                    </li>
+                    <li>
+                        <a href="#">Perchè Dropbox</a>
+                    </li>
+                    <li>
+                        <a href="#">Piani</a>    
+                    </li>
                 </div>
+
                 
                 <div class="trattino-footer"></div>
                 <span id="span-footer"><i class="fas fa-globe-americas"></i> italiano <i class="fas fa-caret-up"></i></span>
