--- a/index.html
+++ b/index.html
@@ -436,8 +436,8 @@
                 </div>
 
             </div> 
-            <div class="footer-fourth-main-section">
-                <div class="container-footer-fourth-main-section container-margin-auto">
+            <div class="footer-fifth-main-section">
+                <div class="container-footer-fifth-main-section container-margin-auto">
                     <h3>Porta Dropbox Business <br> nella tua azienda.</h3>
                     
                     <button>inizia la tua prova gratuita</button>
@@ -445,9 +445,9 @@
             </div>
         </section>
 
-        <!--DOMANDE FREQUENTI-->
+        <!--DOMANDE FREQUENTI QUESTIONS SECTION-->
         <section>
-            <div class="answers-main-section container-margin-auto">
+            <div class="questions-main-section container-margin-auto">
                 <h4>Domande frequenti</h4>
                 <hr>
                 <p>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</p>
@@ -492,7 +492,7 @@
                 </div>
 
                 <div class="float-footer-container fl">
-                    <h4>Dropbox</h4>
+                    <h4>Prodotti</h4>
                     <li>
                         <a href="#">Applicazione desktop</a>
                     </li>
@@ -511,7 +511,7 @@
                 </div>
 
                 <div class="float-footer-container fl">
-                    <h4>Dropbox</h4>
+                    <h4>Azienda</h4>
                     <li>
                         <a href="#">Applicazione desktop</a>
                     </li>
@@ -530,7 +530,7 @@
                 </div>
 
                 <div class="float-footer-container fl">
-                    <h4>Dropbox</h4>
+                    <h4>Supporto</h4>
                     <li>
                         <a href="#">Applicazione desktop</a>
                     </li>
@@ -549,7 +549,7 @@
                 </div>
 
                 <div class="float-footer-container fl">
-                    <h4>Dropbox</h4>
+                    <h4>Community</h4>
                     <li>
                         <a href="#">Applicazione desktop</a>
                     </li>
